feat: stable full AutoGradeAI backend + frontend integration (OpenAI grading, OCR, cookie auth)

--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,10 @@ marimo/_lsp/
 __marimo__/
 
 .env
+
+# App uploads (student/prof PDFs etc.)
+uploads/
+
+# Frontend dependencies
+frontend/node_modules/
+
